tests/errors/invalid_cast.pyx
def f():
    a = <foao>True

_ERRORS = """
2:9: 'foao' is not a type identifier
"""